--- a/dockerfile_bak
+++ b/dockerfile_bak
@@ -61,7 +61,7 @@ RUN apk update \
 
 RUN mkdir -p /usr/local/var/log/php7/
 RUN mkdir -p /usr/local/var/run/
-COPY ./php/php-fpm.con /etc/php7/
+COPY ./php/php-fpm.conf /etc/php7/
 COPY ./php/www.conf /etc/php7/php-fpm.d/
 
 RUN apk add --no-cache --repository http://dl-3.alpinelinux.org/alpine/edge/testing gnu-libiconv
